[效能任务编号]:004 [修改内容说明]:打包压缩包